# FC4

./: .gitignore  CMakeLists.txt  README.md
data/: TEST1.TXT  TEST2.TXT  test3.txt
src/: Fc4.c  Fc4.h  Fc4Comp.c  Fc4Help.c  Fc4Help.h  Fc4List.c  Fc4List.h  Fc4Main.c  Fc4Utils.c  Fc4Utils.h  Fc4Vers.h  config.h.cmake
